// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Features Filters should have current vote average set to 4 1`] = `
<body>
  <div>
    <div
      class="sc-dlfnbm edICMC"
    >
      <div
        class="sc-hKgILt kZKIbv"
      >
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Action
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Adventure
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Animation
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Comedy
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Crime
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Documentary
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Drama
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Family
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Fantasy
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          History
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Horror
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Music
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Mystery
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Romance
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Science Fiction
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          TV Movie
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Thriller
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          War
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Western
        </button>
      </div>
      <div
        class="sc-eCssSg dOfNQx"
      >
        <h3>
          Vote average: 
        </h3>
        <input
          aria-label="number"
          type="number"
          value="4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Components Features Filters should render, without crashing 1`] = `
<body>
  <div>
    <div
      class="sc-dlfnbm edICMC"
    >
      <div
        class="sc-hKgILt kZKIbv"
      >
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Action
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Adventure
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Animation
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Comedy
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Crime
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Documentary
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Drama
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Family
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Fantasy
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          History
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Horror
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Music
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Mystery
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Romance
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Science Fiction
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          TV Movie
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Thriller
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          War
        </button>
        <button
          class="sc-gsTCUz dOAjnQ"
        >
          Western
        </button>
      </div>
      <div
        class="sc-eCssSg dOfNQx"
      >
        <h3>
          Vote average: 
        </h3>
        <input
          aria-label="number"
          type="number"
          value="0"
        />
      </div>
    </div>
  </div>
</body>
`;
